--- a/src/Components/App.module.scss
+++ b/src/Components/App.module.scss
@@ -1,4 +1,4 @@
-button {
+.button {
 
     background: red;
 
@@ -12,4 +12,7 @@ button {
             font-size: 50px;
         }
     }
+}
+.value { 
+    font-size: 66px;
 }
